Fix card container not centered

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,13 +98,19 @@ textarea {
 .sidebar {
     width: 230px;
     height: 100vh;
-    position: fixed;
-    margin-left: -300px;
+    position: fixed; 
+    margin-left: -230px; 
     background-color: #7952b3;
     transition: 0.4s;
 }
+
 .active-nav {
     margin-left: 0;
+}
+
+.active-cont {
+    /* margin-left: 230px; */
+    padding-left: 230px;
 }
 
 .nav-btn {
@@ -115,10 +121,6 @@ textarea {
     -moz-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.3);
-}
-
-.active-cont {
-    margin-left: 300px;
 }
 
 .main-container {
@@ -135,4 +137,8 @@ textarea {
     -moz-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.1);
     -webkit-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.1);
     box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.1);
+}
+
+#card-container {
+    margin: 0 auto;
 }
